[package]
name = "egg-mode"
version = "0.13.0"
authors = ["QuietMisdreavus <grey@quietmisdreavus.net>", "Alex Whitney <adwhit@fastmail.com>"]
description = "Library to interact with the Twitter API"
documentation = "https://tonberry.quietmisdreavus.net/doc/egg_mode/"
repository = "https://github.com/QuietMisdreavus/twitter-rs"
keywords = ["twitter"]
categories = ["api-bindings"]
license = "MPL-2.0"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "QuietMisdreavus/twitter-rs" }
appveyor = { repository = "QuietMisdreavus/twitter-rs" }

[dependencies]
base64 = "0.10.1"
chrono = { version = "0.4.7", features = ["serde"] }
hmac = "0.7.0"
hyper = { git = "https://github.com/yotamofek/hyper.git", rev = "d79e9c6a5ebe7b131791b66c471930fc222bdd5b" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls.git", optional = true}
lazy_static = "1.3.0"
native-tls = { version = "0.2.3", optional = true }
mime = "0.3.13"
rand = "0.6.5"
regex = "1.1.6"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
sha-1 = "0.8.1"
tokio = { git = "https://github.com/tokio-rs/tokio" }
futures-core-preview = { version = "0.3.0-alpha.18" }
futures-util-preview = { version = "0.3.0-alpha.18", features = ["compat"] }
url = "1.7.2"

[features]
default = ["native_tls"]
native_tls = ["native-tls", "hyper-tls"]

[dev-dependencies]
yansi = "0.5.0"

[patch."https://github.com/hyperium/hyper.git"]
hyper = { git = "https://github.com/yotamofek/hyper.git", rev = "d79e9c6a5ebe7b131791b66c471930fc222bdd5b"}

[patch."https://github.com/hyperium/hyper"]
hyper = { git = "https://github.com/yotamofek/hyper.git", rev = "d79e9c6a5ebe7b131791b66c471930fc222bdd5b"}

[patch.crates-io]
hyper = { git = "https://github.com/yotamofek/hyper.git", rev = "d79e9c6a5ebe7b131791b66c471930fc222bdd5b"}